<resources>
    <string name="app_name" translatable="false">YUUA.com</string>
    <string name="YUUA" translatable="false">YUUA</string>
    <string name="home">Home</string>
    <string name="user">User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="bookings">Bookings</string>
    <string name="welcome">Welcome</string>
    <string name="ErrHotelImage">Err: Image not available</string>
    <string name="bookNow">Book now!</string>
    <string name="ver" translatable="false">v0.1 ALPHA</string>
    <string name="clickToGMaps">Press to go to Google Maps</string>
    <string name="logout">Log out</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="keepLogin">Keep logged in</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="ok">Ok</string>
    <string name="registerWithEmail">Register with E-Mail</string>
    <string name="identityDocument">ID number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="phoneNumber">Phone number</string>
    <string name="birthdate">Birthdate</string>
    <string name="registerNow">Register now</string>
    <string name="dateFormat">MM/dd/yyyy</string>
    <string name="searchAccPos">Accomodation, locality...</string>
    <string name="checkInDate">Check-In date</string>
    <string name="checkOutDate">Check-Out date</string>
    <string name="accommodationavailablein">Accommodation available in</string>
    <string name="plus5" translatable="false">+5</string>
    <string name="theDataIsNotValid">The data entered is not valid</string>
    <string name="nameIsNotValid">The name must have at least 2 characters</string>
    <string name="surnameIsNotValid">The surname must have at least 2 characters</string>
    <string name="identityDocumentIsNotValid">Identity document is not valid</string>
    <string name="emailIsNotValid">Email is not valid</string>
    <string name="usernameIsNotValid">Username is taken and needs to have 4 characters</string>
    <string name="imagesNotAvailable">There aren\'t images available</string>
    <string name="yourBookings">Your bookings</string>
    <string name="theSearchBarMustnBeNull">The searchbar canno\'t be null</string>
    <string name="theCheckInDateCannotBeNull">The Check-In date canno\'t be null</string>
    <string name="theCheckOutDateCannotBeNull">The Check-Out date canno\'t be null</string>
    <string name="anonymous">Anonymous</string>
    <string name="welcomeAgain">Welcome again!</string>
    <string name="incorrectUserAndPassword">Incorrect user or password</string>
    <string name="theAccommodationHasBeenBooked">The accommodation has been booked!</string>
    <string name="bookingNumber">Booking number:</string>
    <string name="youHaveBeenLogged">You have been logged</string>
    <string name="deleteReservation">Delete reservation</string>
    <string name="bookedAccomodation">Booked accomodation:</string>
    <string name="description">Description:</string>
    <string name="contactInfo">Contact info:</string>
    <string name="location">Location:</string>
    <string name="locationNotAvailable">Location not available</string>
    <string name="phoneNotAvailable">Phone not available</string>
    <string name="emailNotAvailable">Email not available</string>
    <string name="queryAbout">Query about</string>
    <string name="emailIntro">Hello, I would like to contact you to know if it could be possible to</string>
    <string name="accomodationInfo">Accomodation information</string>
    <string name="bookingInformation">Booking information</string>
    <string name="webNotAvailable">Web not available</string>
    <string name="price">Price</string>
    <string name="capacity">Capacity</string>
    <string name="upward">Upward</string>
    <string name="falling">Falling</string>
    <string name="all">All</string>
    <string name="deleteBookingError">Delete booking error</string>
    <string name="bookingDeleted">Booking deleted</string>
    <string name="hello">Hello</string>
    <string name="yourData">Your data</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
